updated README and cleaned unnecessary files from repo

--- a/quant_analysis.ipynb
+++ b/quant_analysis.ipynb
@@ -1924,7 +1924,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How does your portfolio do?\n",
+    "### How the custom portfolio perform?\n",
     "My portfolio performs very well, outperforming all other portfolios except the Algo 1 portfolio in terms of risk-adjusted-performance (sharpe ratio). However, my portfolio's annual deviation (volatility) was higher than all other portfolios. It also has average beta of 1.279 indicating that it usually moves more than the market. "
    ]
   },
